# image_steganography

./: CMakeLists.txt  README.md  extract_least_significant_bits.cpp  hide_file.cpp  lib.cpp  lib.h
lib/: lib.cpp  lib.h
tests/: extract_least_significant_bits.cpp
